--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/firebase": "^3.2.1",
     "firebase": "^9.17.1",
     "firebase-tools": "^11.23.1",
     "react": "^18.2.0",
